--- a/webapp/index.html
+++ b/webapp/index.html
@@ -202,6 +202,7 @@
             <div class="swiper-slide non-white-bg list-">
               <h2>Ваши настройки и бренды</h2>
               <p>На основе данных, указанными вами ниже, система предлагает наиболее интересные вам розыгрыши, а владельцы брендов узнают, какая аудитория их поддерживает &mdash; и придумывают для вас лучшие предложения и подарки.</p>
+              <p id="fill_data"></p>
 
               <div class="accordion" id="accordionExample">
                 <div style="margin-bottom: 5px;">
