--- a/webapp/index.html
+++ b/webapp/index.html
@@ -187,7 +187,7 @@
                 <div id="yesterday">
                   <!--h3>Вчера и позавчера</h3-->
                   <h3>Вчера</h3>
-                  <div id="just"><p>Не было, или вы не участвовали</p></div>  
+                  <div id="just"><p>Не было вовсе, не было по вашим настройкам, либо вы просто вчера не участвовали</p></div>  
                 </div>
                 <h3>Сегодня</h3>
                 <div id="now"><p>Нет</p></div>
