--- a/webapp/index.html
+++ b/webapp/index.html
@@ -46,11 +46,11 @@
     <link rel="stylesheet" href="src/play.css"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=121"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=121"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=121"></script-->
-    <script type="text/javascript" src="src/poll.js?v=121"></script>
-    <script type="text/javascript" src="src/play.js?v=121"></script>
+    <script type="text/javascript" src="src/common.js?v=1210"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=1210"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=1210"></script-->
+    <script type="text/javascript" src="src/poll.js?v=1210"></script>
+    <script type="text/javascript" src="src/play.js?v=1210"></script>
     <script type="text/javascript">
       window.onload = async function() {
         try {
@@ -228,7 +228,7 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <p>Выберите бренды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать.</p>
+                        <p>Выберите бренды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать. <span class="available">Цветом выделены брэнды</span>, которые участвуют в розыгрышах на данный момент.</p>
                         <p style="font-size: 0.85em;">Если вы заметили, что какого-то бренда не хватает, пожалуйста, <a href="https://telegram.me/alexeyhimself" target="_blank">сообщите нам</a>.</p>
                         <div id="list" class="section"><p><b>Пожалуйста, подождите, список организаций загружается...</b></p></div>
                       </div>
