--- a/webapp/index.html
+++ b/webapp/index.html
@@ -60,7 +60,7 @@
             document.getElementById('tg_only').style.display = 'block';
             let uid = localStorage.getItem('uid');
             if (uid) {
-              text += `<p>Используя этот браузер (ID: ${uid}), вы участвовали в пробном розыгрыше, который проходил 15-16 ноября 2024.</p><p>Чтобы перенести все ваши ранее выбранные опции (регион, пол, возраст, бренды) и историю розыгрышей в Телеграм, просто пройдите по `;
+              text += `<p>Используя этот браузер (ID: ${uid}), вы участвовали в пробном розыгрыше, который проходил 15-16 ноября 2024.</p><p>Чтобы перенести все ваши ранее выбранные опции (регион, пол, возраст, брэнды) и историю розыгрышей в Телеграм, просто пройдите по `;
               text += `<a href="https://telegram.me/adte_bot?start=${uid}">этой ссылке</a> &mdash; и запустите телеграм бота.</p>`;
             }
             else {
@@ -165,7 +165,22 @@
                       <p id="js-canvas-explain"><b>Полностью</b> сотрите защитный слой и дождитесь, когда экран перевернется, и на нем появится обратный отсчет &mdash; так ваше участие в розыгрыше будет зарегистрировано</p>
                       <canvas class="canvas" id="js-canvas"></canvas>
                       <div id="ad"></div>
-                      <div id="ad_explain"><!--p>На этом экране под защитным слоем может находиться какое-то рекламное предложение от компании. Например, объявление о привозе, об акции "скидка на все", предложение посетить магазин / салон в декабре или в январе и т.д. &mdash; что угодно, что вы хотите сообщить вашей аудитории, людям, которые указали, что они <b><i>хотят</i></b> поучаствовать в розыгрыше подарков от вашей организации.</p--></div>
+                      <div id="ad_explain">
+                        <p><b>В период со 2 по 31 декабря 2024, 30 дней подряд, мы намерены каждый день разыгрывать здесь по 1 сертификату от "Лента" номиналом 300 руб</b>. Каждый день кто-то 1 выиграет. Мы решили потратить еще 30 х 300 руб = 9000 руб на розыгрыши и сертификты, чтобы понять: интересно это людям и организациям или нет. Потому что сейчас не понятно: на тестовых запусках пришло не так много людей, как мы ожидали, но и не так мало. А организациям не интересно делать розыгрыши, когда мало людей.</p>
+
+                        <p>Но до 31 декабря мы все узнаем наверняка. И кто-то из организаций, возможно, захочет присоединиться и провести розыгрыши с нами в параллель до 31 декабря - и тогда вы увидите здесь не только розыгрыш сертификатов от "Лента", но и от этих организаций.</p>
+
+                        <p>Если вам хотелось бы, чтобы этот проект существовал, чтобы вы могли весь 2025 в нем играть и выигрывать подарки от организаций города, то вы можете его поддержать. Для этого: (1) участвуйте сами каждый день,
+                        (2) приглашайте к участию ваших родных, друзей и коллег,
+                        (3) честно заполняйте анкету "О вас" и "Брэнды" в конце приложения и просите их тоже заполнить.
+                        </p>
+
+                        <p>Мы видим ваше участие (и неучастие), видим все, что вы отметили, и составляем аналитические таблицы, которые помогают бизнесам понять, сколько сейчас человек, которым интересен их бренд, среди которых они могли бы провести розыгрыши. Это не просто "галки в приложении". Это то, на основе чего организации города принимают решение: разыгрывать здесь что-то среди вас или нет.</p>
+                        <br>
+                        <p style="color: #fab90b;">Мы из Сегежи. И это приложение для розыгрышей мы сегодня создаем в Сегеже (пользуясь случаем, передаем привет нашим бывшим учителям информатики Урбанович В.И., математики Фокиной Т.Ю. и английского языка Романовой О.Э. в СОШ №7 👋). И мы очень надеемся и полагаемся на поддержку горожан.</p>
+                        <br>
+                        <p>Спасибо за внимание и хорошего дня!</p>
+                      </div>
                     </div>
                   </div>
 
@@ -200,7 +215,7 @@
             </div>
 
             <div class="swiper-slide non-white-bg list-">
-              <h2>Ваши настройки и бренды</h2>
+              <h2>Ваши настройки и брэнды</h2>
               <p>На основе данных, указанными вами ниже, система предлагает наиболее интересные вам розыгрыши, а владельцы брендов узнают, какая аудитория их поддерживает &mdash; и придумывают для вас лучшие предложения и подарки.</p>
               <p id="fill_data"></p>
 
@@ -223,12 +238,12 @@
                   <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                        Бренды
+                        Брэнды
                       </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <p>Выберите бренды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать. <span class="available">Цветом выделены брэнды</span>, которые участвуют в розыгрышах на данный момент.</p>
+                        <p>Выберите брэнды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать. <span class="available">Цветом выделены брэнды</span>, которые участвуют в розыгрышах на данный момент.</p>
                         <p style="font-size: 0.85em;">Если вы заметили, что какого-то бренда не хватает, пожалуйста, <a href="https://telegram.me/alexeyhimself" target="_blank">сообщите нам</a>.</p>
                         <div id="list" class="section"><p><b>Пожалуйста, подождите, список организаций загружается...</b></p></div>
                       </div>
