--- a/webapp/index.html
+++ b/webapp/index.html
@@ -166,7 +166,7 @@
                       <canvas class="canvas" id="js-canvas"></canvas>
                       <div id="ad"></div>
                       <div id="ad_explain">
-                        <p>В период со 2 по 31 декабря 2024, каждый день, 30 дней подряд, мы намерены разыгрывать здесь, как минимум, по 1 сертификату от "Лента" номиналом 300 руб. Приходите, участвуйте и выигрывайте! <br><a href="https://vk.com/segezhadays?w=wall-78535365_59746" target="_blank" style="color: #fab90b;">Подробнее...</a>
+                        <p>Со 2 по 31 декабря 2024, каждый день, 30 дней подряд, мы намерены разыгрывать здесь, как минимум, по 1 сертификату от "Лента" номиналом 300 руб. Приходите, участвуйте и выигрывайте! <br><a href="https://vk.com/segezhadays?w=wall-78535365_59746" target="_blank" style="color: #fab90b;">Подробнее...</a>
                         <!--Каждый день кто-то 1 выиграет. Мы решили потратить еще 30 х 300 руб = 9000 руб на розыгрыши и сертификты, чтобы понять: интересно это людям и организациям или нет. Потому что сейчас не понятно: на тестовых запусках пришло не так много людей, как мы ожидали, но и не так мало. А организациям не интересно делать розыгрыши, когда мало людей.</p>
 
                         <p>Но до 31 декабря мы все узнаем наверняка. И кто-то из организаций, возможно, захочет присоединиться и провести розыгрыши с нами в параллель до 31 декабря - и тогда вы увидите здесь не только розыгрыш сертификатов от "Лента", но и от этих организаций.</p>
