--- a/webapp/index.html
+++ b/webapp/index.html
@@ -168,26 +168,11 @@
                       <div id="ad_explain">
                         <p>Каждый день, со 2 по 31 декабря 2024, 30 дней подряд, мы намерены разыгрывать здесь, как минимум, по 1 сертификату от "Лента" номиналом 300 руб. "Как минимум" &mdash; потому что в течение месяца к розыгрышам могут присоединиться организации города. Но они присоединятся, только если нас здесь будет больше. Хотя бы в 2 раза больше, чем на 1 декабря.</p>
 
-                        <p>Участвуйте сами! Выигрывайте! Приглашайте родных, друзей и коллег! Так нас станет больше быстрее &mdash; и так скорее начнутся розыгрыши от брэндов, за которые вы отдали больше всего голосов в разделе "Настройки" → "Брэнды".</p>
+                        <p>Участвуйте сами! Выигрывайте! <a href="https://t.me/share/url?url=https://t.me/adte_bot" target="_blank" style="color: #fab90b;">Приглашайте родных, друзей и коллег</a>! Так нас станет больше быстрее &mdash; и так скорее начнутся розыгрыши от брэндов, за которые вы отдали больше всего голосов в разделе "Настройки" → "Брэнды".</p>
 
                         <p>В противном случае, если нас с вами, участников, не будет становиться больше, нам придется остановить этот проект с 1 января.</p>
 
                         <p>Спасибо за внимание!</p>
-                        <!--br><a href="https://vk.com/segezhadays?w=wall-78535365_59746" target="_blank" style="color: #fab90b;">Подробнее...</a-->
-                        <!--Каждый день кто-то 1 выиграет. Мы решили потратить еще 30 х 300 руб = 9000 руб на розыгрыши и сертификты, чтобы понять: интересно это людям и организациям или нет. Потому что сейчас не понятно: на тестовых запусках пришло не так много людей, как мы ожидали, но и не так мало. А организациям не интересно делать розыгрыши, когда мало людей.</p>
-
-                        <p>Но до 31 декабря мы все узнаем наверняка. И кто-то из организаций, возможно, захочет присоединиться и провести розыгрыши с нами в параллель до 31 декабря - и тогда вы увидите здесь не только розыгрыш сертификатов от "Лента", но и от этих организаций.</p>
-
-                        <p>Если вам хотелось бы, чтобы этот проект существовал, чтобы вы могли весь 2025 в нем играть и выигрывать подарки от организаций города, то вы можете его поддержать. Для этого: (1) участвуйте сами каждый день,
-                        (2) приглашайте к участию ваших родных, друзей и коллег,
-                        (3) честно заполняйте анкету "О вас" и "Брэнды" в конце приложения и просите их тоже заполнить.
-                        </p>
-
-                        <p>Мы видим ваше участие (и неучастие), видим все, что вы отметили, и составляем аналитические таблицы, которые помогают бизнесам понять, сколько сейчас человек, которым интересен их бренд, среди которых они могли бы провести розыгрыши. Это не просто "галки в приложении". Это то, на основе чего организации города принимают решение: разыгрывать здесь что-то среди вас или нет.</p>
-                        
-                        <p style="color: #fab90b;">Мы из Сегежи. И это приложение для розыгрышей мы сегодня создаем в Сегеже (пользуясь случаем, передаем привет нашим бывшим учителям информатики Урбанович В.И., математики Фокиной Т.Ю. и английского языка Романовой О.Э. в СОШ №7 👋). И мы очень надеемся и полагаемся на поддержку горожан.</p>
-                        
-                        <p>Спасибо за внимание и хорошего дня!</p-->
                       </div>
                     </div>
                   </div>
