--- a/webapp/index.html
+++ b/webapp/index.html
@@ -166,13 +166,14 @@
                       <canvas class="canvas" id="js-canvas"></canvas>
                       <div id="ad"></div>
                       <div id="ad_explain">
-                        <p>Каждый день, со 2 по 31 декабря 2024, 30 дней подряд, мы намерены разыгрывать здесь, как минимум, по 1 сертификату от "Лента" номиналом 300 руб. "Как минимум" &mdash; потому что в течение месяца к розыгрышам могут присоединиться организации города. Но они присоединятся, только если нас здесь будет больше. Хотя бы в 2 раза больше, чем на 1 декабря.</p>
+                        <p>Каждый день, со 2 по 31 декабря 2024, 30 дней подряд, мы разыгрываем здесь, как минимум, по 1 сертификату от "Лента" номиналом 300 руб. "Как минимум" &mdash; потому что в течение месяца к розыгрышам могут присоединиться организации города. Но они присоединятся, только если нас здесь будет больше.</p>
 
-                        <p>Участвуйте сами! Выигрывайте! <a href="https://t.me/share/url?url=https://t.me/adte_bot" target="_blank" style="color: #fab90b;">Приглашайте родных, друзей и коллег</a>! Так нас станет больше быстрее &mdash; и так скорее начнутся розыгрыши от брэндов, за которые вы отдали больше всего голосов в разделе "Настройки" → "Брэнды".</p>
-
-                        <p>В противном случае, если нас с вами, участников, не будет становиться больше, нам придется остановить этот проект с 1 января.</p>
-
-                        <p>Спасибо за внимание!</p>
+                        <p>Готовятся к участию в розыгрышах:
+                        <img src="https://avatars.mds.yandex.net/get-altay/5115998/2a0000018ee7d71923d511728bb9f1b13a0a/XXL_height" style="width: 40%; margin-top: 5px;">
+                        <img src="img/brands/logos/mk.png" style="width: 40%; margin-top: 5px;">
+                        </p>
+                        <p>(чтобы участвовать в розыгрышах от них, отметьте их в разделе "Настройки" → "Брэнды")</p>
+                        <p>Участвуйте сами, выигрывайте, а также <a href="https://t.me/share/url?url=https://t.me/adte_bot" target="_blank" style="color: #fab90b;">приглашайте родных, друзей и коллег</a>! Так нас станет больше быстрее &mdash; и так скорее начнутся розыгрыши от брэндов, за которые вы отдали больше всего голосов.</p>
                       </div>
                     </div>
                   </div>
