--- a/webapp/index.html
+++ b/webapp/index.html
@@ -237,7 +237,7 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <p>Выберите брэнды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать. <span class="available">Цветом выделены брэнды</span>, которые участвуют в розыгрышах на данный момент.</p>
+                        <p>Выберите брэнды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать. Цветами выделены брэнды, которые <span class="available">уже участвуют</span> или <span class="preparing">готовятся к участию</span> в розыгрышах.</p>
                         <p style="font-size: 0.85em;">Если вы заметили, что какого-то бренда не хватает, пожалуйста, <a href="https://telegram.me/alexeyhimself" target="_blank">сообщите нам</a>.</p>
                         <div id="list" class="section"><p><b>Пожалуйста, подождите, список организаций загружается...</b></p></div>
                       </div>
