--- a/webapp/index.html
+++ b/webapp/index.html
@@ -134,7 +134,7 @@
           <div class="col-xl-4 offset-xl-4 col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-12 screen">
             <div class="col-10 offset-1">
               <div id="second_screen">
-                <p style="margin-bottom: 1em;">Выберите ниже 1 или 2 бренда, в пробном розыгрышах подарков от которых вы хотите поучаствовать:</p>
+                <p style="margin-bottom: 1em;">Выберите ниже 1 или 2 брэнда, в пробном розыгрышах подарков от которых вы хотите поучаствовать:</p>
                 <img id="brand-107" class="brand bid-107" src="img/brands/logos/mk.png"><br>
                 <img id="brand-55" class="brand bid-55" src="img/brands/logos/lenta.png">
                 
@@ -210,7 +210,7 @@
 
             <div class="swiper-slide non-white-bg list-">
               <h2>Ваши настройки и брэнды</h2>
-              <p>На основе данных, указанными вами ниже, система предлагает наиболее интересные вам розыгрыши, а владельцы брендов узнают, какая аудитория их поддерживает &mdash; и придумывают для вас лучшие предложения и подарки.</p>
+              <p>На основе данных, указанными вами ниже, система предлагает наиболее интересные вам розыгрыши, а владельцы брэндов узнают, какая аудитория их поддерживает &mdash; и придумывают для вас лучшие предложения и подарки.</p>
               <p id="fill_data"></p>
 
               <div class="accordion" id="accordionExample">
@@ -238,7 +238,7 @@
                     <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
                         <p>Выберите брэнды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать. Цветами выделены брэнды, которые <span class="available">уже участвуют</span> или <span class="preparing">готовятся к участию</span> в розыгрышах.</p>
-                        <p style="font-size: 0.85em;">Если вы заметили, что какого-то бренда не хватает, пожалуйста, <a href="https://telegram.me/alexeyhimself" target="_blank">сообщите нам</a>.</p>
+                        <p style="font-size: 0.85em;">Если вы заметили, что какого-то брэнда не хватает, пожалуйста, <a href="https://telegram.me/alexeyhimself" target="_blank">сообщите нам</a>.</p>
                         <div id="list" class="section"><p><b>Пожалуйста, подождите, список организаций загружается...</b></p></div>
                       </div>
                     </div>
