--- a/webapp/index.html
+++ b/webapp/index.html
@@ -206,9 +206,9 @@
                 <div id="past"><p>Здесь будет история и аналитика по всем розыгрышам, в которых вы будете участвовать.</p></div>
                 <br><br>
               </div>
-            </div>
+            <!--/div>
 
-            <div class="swiper-slide non-white-bg list-">
+            <div class="swiper-slide non-white-bg list-"-->
               <h2>Ваши настройки и брэнды</h2>
               <p>На основе данных, указанными вами ниже, система предлагает наиболее интересные вам розыгрыши, а владельцы брэндов узнают, какая аудитория их поддерживает &mdash; и придумывают для вас лучшие предложения и подарки.</p>
               <p id="fill_data"></p>
@@ -238,7 +238,7 @@
                     <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
                         <p>Выберите брэнды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать. Цветами выделены брэнды, которые <span class="available">уже участвуют</span> или <span class="preparing">готовятся к участию</span> в розыгрышах.</p>
-                        <p style="font-size: 0.85em;">Если вы заметили, что какого-то брэнда не хватает, пожалуйста, <a href="https://telegram.me/alexeyhimself" target="_blank">сообщите нам</a>.</p>
+                        <p style="font-size: 0.85em;">Если вы заметили, что какого-то брэнда не хватает, или его больше нет, то, пожалуйста, <a href="https://telegram.me/alexeyhimself" target="_blank">сообщите нам</a>.</p>
                         <div id="list" class="section"><p><b>Пожалуйста, подождите, список организаций загружается...</b></p></div>
                       </div>
                     </div>
