--- a/webapp/index.html
+++ b/webapp/index.html
@@ -170,7 +170,7 @@
                         <img src="https://avatars.mds.yandex.net/get-altay/5115998/2a0000018ee7d71923d511728bb9f1b13a0a/XXL_height" style="width: 45%; border-radius: 10px; margin-top: 5px;">
                         <img src="img/brands/logos/mk.png" style="width: 45%; border-radius: 10px; margin-top: 5px;">
                         </p>
-                        <p style="font-size: 0.8em;">(чтобы участвовать в розыгрышах от них, отметьте их в разделе "Настройки" → "Брэнды")</p>
+                        <p style="font-size: 0.8em;">(чтобы участвовать в розыгрышах от этих брэндов, отметьте их в разделе "Настройки" → "Брэнды")</p>
                         <br>
                         <p>Участвуйте сами, выигрывайте, а также <a href="https://t.me/share/url?url=https://t.me/adte_bot" target="_blank" style="color: #fab90b;">приглашайте родных, друзей и коллег</a>! Так нас станет больше быстрее &mdash; и так скорее начнутся розыгрыши от брэндов, за которые вы отдали больше всего голосов.</p>
                         <br>
