--- a/webapp/index.html
+++ b/webapp/index.html
@@ -167,7 +167,7 @@
                       <div id="ad"></div>
                       <div id="ad_explain">
                         <p>🎉 Готовятся к участию в розыгрышах:
-                        <img src="https://avatars.mds.yandex.net/get-altay/5115998/2a0000018ee7d71923d511728bb9f1b13a0a/XXL_height" style="width: 45%; border-radius: 10px; margin-top: 5px;">
+                        <img src="https://www.dropbox.com/scl/fi/n2xz4hh6b0minlj0skink/es.png?rlkey=6bvxauzx201ofy2blgiebc2it&raw=1" style="width: 45%; border-radius: 10px; margin-top: 5px;">
                         <img src="img/brands/logos/mk.png" style="width: 45%; border-radius: 10px; margin-top: 5px;">
                         </p>
                         <p style="font-size: 0.8em;">(чтобы участвовать в розыгрышах от этих брэндов, отметьте их в разделе "Настройки" → "Брэнды")</p>
