--- a/webapp/index.html
+++ b/webapp/index.html
@@ -203,6 +203,10 @@
                 <div id="now"><p>Нет</p></div>
                 <h3>Завтра</h3>
                 <div id="next"><p>Нет</p></div>
+
+              <h2 style="margin: 1.5em 0 0.3em 0">⭐️ Ваш рейтинг</h2>
+              <p>Скоро здесь будет информация о вашем "рейтинге" &mdash; вашей вероятности побеждать в розыгрышах по отношению к другим участникам. На рейтинг влияют такие показатели, как: заполнили ли вы разделы "О вас" и "Ваши брэнды", сколько раз подряд вы уже участвуете, давно ли вы не выигрывали, и т.д. Если вы постоянно участвуете, заполнили свой профиль и давно не выигрывали &mdash; ваши шансы на выигрыш в ближайшее время будут самыми высокими, и наоборот.</p>
+
               <h2 style="margin: 1.5em 0 0.3em 0">Ваша история и аналитика</h2>
                 <div id="past"><p>Здесь будет история и аналитика по всем розыгрышам, в которых вы будете участвовать.</p></div>
                 <br><br>
