--- a/webapp/index.html
+++ b/webapp/index.html
@@ -167,17 +167,16 @@
                       <div id="ad"></div>
                       <div id="ad_explain">
                         <p style="font-size: 0.8em;">Каждый день, со 2 по 31 декабря 2024, 30 дней подряд, мы разыгрываем здесь, как минимум, по 1 сертификату от "Лента" номиналом 300 руб. "Как минимум" &mdash; потому что в течение месяца к розыгрышам будут присоединяться организации города. И они присоединятся тем скорее и охотнее, чем нас здесь будет больше.</p>
-                        <br>
 
-                        <p>🎉 Готовятся к участию в розыгрышах:
+                        <p style="margin-top: 1em;">🎉 Готовятся к участию в розыгрышах:
                         <img src="img/brands/logos/es.png" style="width: 35%; border-radius: 10px; margin-top: 5px;">
                         <img src="img/brands/logos/mk.png" style="width: 35%; border-radius: 10px; margin-top: 5px;">
                         </p>
                         <p style="font-size: 0.8em;">(чтобы участвовать в розыгрышах от этих брэндов, отметьте их в разделе "Настройки" → "Брэнды")</p>
                         
-                        <p>Участвуйте сами, выигрывайте, а также <a href="https://t.me/share/url?url=https://t.me/adte_bot" target="_blank" style="color: #fab90b;">приглашайте родных, друзей и коллег</a>! Так нас станет больше быстрее &mdash; и так скорее начнутся розыгрыши от брэндов, за которые вы отдали больше всего голосов.</p>
-                        <br>
-                        <p style="font-size: 0.8em;">Эту штуку делают сегежские и в Сегеже. Пользуясь случаем, передаем привет нашим бывшим учителям информатики (Урбанович В.И.), математики (Фокина Т.Ю.) и английского языка (Романова О.Э.) в МОУ СОШ №7, 2004 👋 </p>
+                        <p>Участвуйте сами, выигрывайте, а также <a href="https://t.me/share/url?url=https://t.me/adte_bot" target="_blank" style="color: #fab90b;">приглашайте родных, друзей и коллег</a>! Так нас станет больше быстрее &mdash; и так скорее начнутся розыгрыши от брэндов, за которые вы отдали больше всего голосов!</p>
+                        
+                        <p style="font-size: 0.8em; margin-top: 1em;">Эту штуку делают сегежские и в Сегеже. Пользуясь случаем, передаем привет нашим бывшим учителям информатики (Урбанович В.И.), математики (Фокина Т.Ю.) и английского языка (Романова О.Э.) в МОУ СОШ №7, 2004 👋 </p>
                       </div>
                     </div>
                   </div>
