--- a/webapp/index.html
+++ b/webapp/index.html
@@ -166,7 +166,7 @@
                       <canvas class="canvas" id="js-canvas"></canvas>
                       <div id="ad"></div>
                       <div id="ad_explain">
-                        <p style="margin-top: 0em;">"Лента" сейчас + готовятся к участию:
+                        <p style="margin-top: 0em;">"Лента" &mdash; каждый день<br><b>+ готовятся к участию с 9 декабря:</b>
                         <img src="img/brands/logos/es.png" style="width: 42%; border-radius: 10px; margin-top: 5px;">
                         <img src="img/brands/logos/mk.png" style="width: 42%; border-radius: 10px; margin-top: 5px;">
                         </p>
@@ -206,8 +206,8 @@
                 <h3>Завтра</h3>
                 <div id="next"><p>Нет</p></div>
 
-              <h2 style="margin: 1.5em 0 0.3em 0">⭐️ Ваш рейтинг</h2>
-              <p>Скоро здесь будет информация о вашем "рейтинге" &mdash; вашей вероятности побеждать в розыгрышах по отношению к другим участникам. На рейтинг влияют такие показатели, как: заполнили ли вы разделы "О вас" и "Ваши бренды", сколько раз подряд вы уже участвуете, давно ли вы не выигрывали, и т.д. Если вы постоянно участвуете, заполнили свой профиль, давно не выигрывали, да еще, к тому же, "ранняя пташка" (сами до уведомления заходите узнать, выиграли вы или нет) &mdash; то ваши шансы на выигрыш в ближайшее время будут самыми высокими, и наоборот.</p>
+              <h2 style="margin: 1.5em 0 0.3em 0" id="rating_header">⭐️ Ваш рейтинг</h2>
+              <p id="rating_intro">Скоро здесь будет информация о вашем "рейтинге" &mdash; вашей вероятности побеждать в розыгрышах по отношению к другим участникам. На рейтинг влияют такие показатели, как: заполнили ли вы разделы "О вас" и "Ваши бренды", сколько раз подряд вы уже участвуете, давно ли вы не выигрывали, и т.д. Если вы постоянно участвуете, заполнили свой профиль, давно не выигрывали, да еще, к тому же, "ранняя пташка" (сами до уведомления заходите узнать, выиграли вы или нет) &mdash; то ваши шансы на выигрыш в ближайшее время будут самыми высокими, и наоборот.</p>
 
               <h2 style="margin: 1.5em 0 0.3em 0">Ваша история и аналитика</h2>
                 <div id="past"><p>Здесь будет история и аналитика по всем розыгрышам, в которых вы будете участвовать.</p></div>
