--- a/webapp/index.html
+++ b/webapp/index.html
@@ -222,12 +222,12 @@
 
               <h2 style="margin: 1.5em 0 0.3em 0">Ваша история и аналитика</h2>
                 <div id="past"><p>Здесь будет история и аналитика по всем розыгрышам, в которых вы будете участвовать.</p></div>
-                <br><br>
+                <br>
               </div>
             <!--/div>
 
             <div class="swiper-slide non-white-bg list-"-->
-              <h2>Ваши настройки и бренды</h2>
+              <h2>Ваши настройки</h2>
               <p>На основе данных, указанными вами ниже, система предлагает наиболее интересные вам розыгрыши, а владельцы брендов узнают, какая аудитория их поддерживает &mdash; и придумывают для вас лучшие предложения и подарки.</p>
               <p id="fill_data"></p>
 
