--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,17 +40,17 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=13130000"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=13130000"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=12140830"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=12140830"/>
 
-    <link rel="stylesheet" href="src/play.css?v=13130000"/>
+    <link rel="stylesheet" href="src/play.css?v=12140830"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=13130000"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=13130000"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=13130000"></script-->
-    <script type="text/javascript" src="src/poll.js?v=13130000"></script>
-    <script type="text/javascript" src="src/play.js?v=13130000"></script>
+    <script type="text/javascript" src="src/common.js?v=12140830"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=12140830"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=12140830"></script-->
+    <script type="text/javascript" src="src/poll.js?v=12140830"></script>
+    <script type="text/javascript" src="src/play.js?v=12140830"></script>
     <script type="text/javascript">
       window.onload = async function() {
         try {
@@ -255,7 +255,7 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <p>Выберите бренды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать. Цветами выделены бренды, которые <span class="available">уже участвуют</span> или <span class="preparing">готовятся к участию</span> в розыгрышах.</p>
+                        <p>Выберите бренды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать. Цветами выделены бренды, которые <span class="available">уже участвуют</span>, <span class="preparing">готовятся к участию</span> или <span class="not-available">пока не заинтересованы участвовать</span> в розыгрышах.</p>
                         <p style="font-size: 0.85em;">Если вы заметили, что какого-то бренда не хватает, или его больше нет, то, пожалуйста, <a href="https://telegram.me/alexeyhimself" target="_blank">сообщите нам</a>.</p>
                         <div id="list" class="section"><p><b>Пожалуйста, подождите, список организаций загружается...</b></p></div>
                       </div>
