--- a/webapp/index.html
+++ b/webapp/index.html
@@ -256,7 +256,7 @@
                     <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
                         <p>Выберите бренды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать. Цветами выделены бренды, которые <span class="available">уже участвуют</span>, <span class="preparing">готовятся к участию</span> или <span class="not-available">пока не заинтересованы участвовать</span> в розыгрышах.</p>
-                        <p style="font-size: 0.85em;">Если вы заметили, что какого-то бренда не хватает, или его больше нет, то, пожалуйста, <a href="https://telegram.me/alexeyhimself" target="_blank">сообщите нам</a>.</p>
+                        <p style="font-size: 0.85em;">Если вы заметили, что какого-то бренда не хватает, или его больше нет, или вы хозяин бренда и хотите поучаствовать в розыгрышах, то, пожалуйста, <a href="https://telegram.me/adt_bot" target="_blank">сообщите нам об этом</a> прямо в боте.</p>
                         <div id="list" class="section"><p><b>Пожалуйста, подождите, список организаций загружается...</b></p></div>
                       </div>
                     </div>
