--- a/webapp/index.html
+++ b/webapp/index.html
@@ -167,7 +167,7 @@
                     <!-- https://codepen.io/Totati/pen/pPXrJV -->
                     <!-- https://github.com/andreruffert/scratchie.js -->
                     <div class="container-" id="js-container">
-                      <p id="js-canvas-explain"><b>Полностью</b> сотрите защитный слой и дождитесь, когда экран перевернется, и на нем появится обратный отсчет &mdash; так ваше участие в розыгрыше будет зарегистрировано</p>
+                      <p id="js-canvas-explain"><b>Полностью</b> сотрите защитный слой и дождитесь, когда экран перевернется, и на нем появится обратный отсчет &mdash; так ваше участие в розыгрыше будет засчитано</p>
                       <canvas class="canvas" id="js-canvas"></canvas>
                       <div id="ad"></div>
                       <div id="ad_explain"></div>
