--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,17 +40,17 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=12171400"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=12171400"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=12171438"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=12171438"/>
 
-    <link rel="stylesheet" href="src/play.css?v=12171400"/>
+    <link rel="stylesheet" href="src/play.css?v=12171438"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=12171400"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=12171400"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=12171400"></script-->
-    <script type="text/javascript" src="src/poll.js?v=12171400"></script>
-    <script type="text/javascript" src="src/play.js?v=12171400"></script>
+    <script type="text/javascript" src="src/common.js?v=12171438"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=12171438"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=12171438"></script-->
+    <script type="text/javascript" src="src/poll.js?v=12171438"></script>
+    <script type="text/javascript" src="src/play.js?v=12171438"></script>
     <script type="text/javascript">
       window.onload = async function() {
         try {
@@ -202,7 +202,7 @@
               <h2 style="margin: 1.5em 0 0.3em 0" id="rating_header">⭐️ Ваш рейтинг</h2>
               <p id="rating_intro">Скоро здесь будет информация о вашем "рейтинге" &mdash; вашей вероятности побеждать в розыгрышах по отношению к другим участникам. На рейтинг влияют такие показатели, как: заполнили ли вы разделы "О вас" и "Ваши бренды", сколько раз подряд вы уже участвуете, давно ли вы не выигрывали, и т.д. Если вы постоянно участвуете, заполнили свой профиль, давно не выигрывали &mdash; то ваши шансы на выигрыш в ближайшее время будут самыми высокими, и наоборот.</p>
 
-              <h2 style="margin: 1.5em 0 0.3em 0">Ваша история и аналитика</h2>
+              <h2 style="margin: 1.5em 0 0.3em 0;" id="past_header">Ваша история и аналитика</h2>
                 <div id="past"><p>Здесь будет история и аналитика по всем розыгрышам, в которых вы будете участвовать.</p></div>
                 <br>
               </div>
