--- a/webapp/index.html
+++ b/webapp/index.html
@@ -199,11 +199,16 @@
                 <h3>Завтра</h3>
                 <div id="next"><p>Нет</p></div>
 
-              <h2 style="margin: 1.5em 0 0.3em 0" id="rating_header">⭐️ Ваш рейтинг</h2>
-              <p id="rating_intro">Скоро здесь будет информация о вашем "рейтинге" &mdash; вашей вероятности побеждать в розыгрышах по отношению к другим участникам. На рейтинг влияют такие показатели, как: заполнили ли вы разделы "О вас" и "Ваши бренды", сколько раз подряд вы уже участвуете, давно ли вы не выигрывали, и т.д. Если вы постоянно участвуете, заполнили свой профиль, давно не выигрывали &mdash; то ваши шансы на выигрыш в ближайшее время будут самыми высокими, и наоборот.</p>
+                <h2 style="margin: 1.5em 0 0.3em 0" id="rating_header">⭐️ Ваш рейтинг</h2>
+                <p id="rating_intro">Скоро здесь будет информация о вашем "рейтинге" &mdash; вашей вероятности побеждать в розыгрышах по отношению к другим участникам. На рейтинг влияют такие показатели, как: заполнили ли вы разделы "О вас" и "Ваши бренды", сколько раз подряд вы уже участвуете, давно ли вы не выигрывали, и т.д. Если вы постоянно участвуете, заполнили свой профиль, давно не выигрывали &mdash; то ваши шансы на выигрыш в ближайшее время будут самыми высокими, и наоборот.</p>
 
-              <h2 style="margin: 1.5em 0 0.3em 0;" id="past_header">Ваша история и аналитика</h2>
-                <div id="past"><p>Здесь будет история и аналитика по всем розыгрышам, в которых вы будете участвовать.</p></div>
+                <h2 style="margin: 1.5em 0 0.3em 0;" id="past_header">Пригласить других</h2>
+                <p>Пригласите к участию своих родных и близких: <a href="https://t.me/share/url?url=https://t.me/adte_bot?start=irfr" target="_blank">@adte_bot</a> &mdash; и выигрывайте больше подарков вместе!</p>
+
+                <h2 style="margin: 1.5em 0 0.3em 0;" id="past_header">Ваша история и аналитика</h2>
+                <div id="past">
+                  <p>Здесь будет история и аналитика по всем розыгрышам, в которых вы будете участвовать.</p>
+                </div>
                 <br>
               </div>
             <!--/div>
@@ -237,7 +242,7 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <p>Выберите бренды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать. Цветами выделены бренды, которые <span class="available">сейчас участвуют</span> (либо в данный момент на паузе, но могут начать участвовать в любой момент), <span class="preparing">готовятся к участию</span> или <span class="not-available">пока не заинтересованы участвовать</span> в участии в розыгрышах.</p>
+                        <p>Выберите бренды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать. Цветами выделены бренды, которые <span class="available">сейчас участвуют</span> (либо в данный момент на паузе, но могут начать участвовать в любой момент), <span class="preparing">готовятся к участию</span> или <span class="not-available">пока не заинтересованы участвовать</span> в розыгрышах.</p>
                         <p style="font-size: 0.85em;">Если вы заметили, что какого-то бренда не хватает, или его больше нет, или вы хозяин бренда и хотите поучаствовать в розыгрышах, то, пожалуйста, <a href="https://telegram.me/adt_bot" target="_blank">сообщите нам об этом</a> прямо в боте.</p>
                         <div id="list" class="section"><p><b>Пожалуйста, подождите, список организаций загружается...</b></p></div>
                       </div>
