--- a/webapp/index.html
+++ b/webapp/index.html
@@ -203,7 +203,7 @@
                 <p id="rating_intro">Скоро здесь будет информация о вашем "рейтинге" &mdash; вашей вероятности побеждать в розыгрышах по отношению к другим участникам. На рейтинг влияют такие показатели, как: заполнили ли вы разделы "О вас" и "Ваши бренды", сколько раз подряд вы уже участвуете, давно ли вы не выигрывали, и т.д. Если вы постоянно участвуете, заполнили свой профиль, давно не выигрывали &mdash; то ваши шансы на выигрыш в ближайшее время будут самыми высокими, и наоборот.</p>
 
                 <h2 style="margin: 1.5em 0 0.3em 0;" id="past_header">Пригласить других</h2>
-                <p>Пригласите к участию своих родных и близких: <a href="https://t.me/share/url?url=https://t.me/adte_bot?start=irfr" target="_blank">@adte_bot</a> &mdash; и выигрывайте больше подарков вместе!</p>
+                <p>Пригласите к участию своих родных и близких: <a href="https://telegram.me/share/url?url=https://telegram.me/adte_bot?start=irfr" target="_blank">@adte_bot</a> &mdash; и выигрывайте больше подарков вместе!</p>
 
                 <h2 style="margin: 1.5em 0 0.3em 0;" id="past_header">Ваша история и аналитика</h2>
                 <div id="past">
