--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,17 +40,17 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=12221325"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=12221325"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=12221326"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=12221326"/>
 
-    <link rel="stylesheet" href="src/play.css?v=12221325"/>
+    <link rel="stylesheet" href="src/play.css?v=12221326"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=12221325"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=12221325"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=12221325"></script-->
-    <script type="text/javascript" src="src/poll.js?v=12221325"></script>
-    <script type="text/javascript" src="src/play.js?v=12221325"></script>
+    <script type="text/javascript" src="src/common.js?v=12221326"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=12221326"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=12221326"></script-->
+    <script type="text/javascript" src="src/poll.js?v=12221326"></script>
+    <script type="text/javascript" src="src/play.js?v=12221326"></script>
     <script type="text/javascript">
       window.onload = async function() {
         try {
@@ -191,7 +191,7 @@
               <div id="drawings_list">
                 <div id="yesterday">
                   <!--h3>Вчера и позавчера</h3-->
-                  <h3>Вчера</h3>
+                  <h3>Вчера или ранее</h3>
                   <div id="just"><p>Не было вовсе, не было по вашим настройкам, либо вы просто вчера не участвовали</p></div>  
                 </div>
                 <h3>Сегодня</h3>
