--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,17 +40,17 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=12310004"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=12310004"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=12310005"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=12310005"/>
 
-    <link rel="stylesheet" href="src/play.css?v=12310004"/>
+    <link rel="stylesheet" href="src/play.css?v=12310005"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=12310004"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=12310004"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=12310004"></script-->
-    <script type="text/javascript" src="src/poll.js?v=12310004"></script>
-    <script type="text/javascript" src="src/play.js?v=12310004"></script>
+    <script type="text/javascript" src="src/common.js?v=12310005"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=12310005"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=12310005"></script-->
+    <script type="text/javascript" src="src/poll.js?v=12310005"></script>
+    <script type="text/javascript" src="src/play.js?v=12310005"></script>
     <script type="text/javascript">
       window.onload = async function() {
         try {
@@ -80,7 +80,7 @@
           try {
             window.Telegram.WebApp.ready();
             window.Telegram.WebApp.expand();
-            window.Telegram.WebApp.requestFullscreen();
+            //window.Telegram.WebApp.requestFullscreen();
             //window.Telegram.WebApp.setBackgroundColor("#fffaf0");  // floralwhite
             window.Telegram.WebApp.setHeaderColor("#fffaf0");  // floralwhite
           } // Error: WebAppHeaderColorKeyInvalid at setHeaderColor
