--- a/webapp/index.html
+++ b/webapp/index.html
@@ -196,7 +196,7 @@
                 </div>
                 <h3>Сегодня</h3>
                 <div id="now"><p>Нет</p></div>
-                <h3>Завтра и до 14 января</h3>
+                <h3>Завтра (и до 14 января)</h3>
                 <div id="next"><p>Нет</p></div>
 
                 <h2 style="margin: 1.5em 0 0.3em 0" id="rating_header">⭐️ Ваш рейтинг</h2>
