--- a/webapp/index.html
+++ b/webapp/index.html
@@ -80,7 +80,7 @@
           try {
             window.Telegram.WebApp.ready();
             window.Telegram.WebApp.expand();
-            //window.Telegram.WebApp.requestFullscreen();
+            window.Telegram.WebApp.requestFullscreen();
             //window.Telegram.WebApp.setBackgroundColor("#fffaf0");  // floralwhite
             window.Telegram.WebApp.setHeaderColor("#fffaf0");  // floralwhite
           } // Error: WebAppHeaderColorKeyInvalid at setHeaderColor
