--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,17 +40,17 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=01041251"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=01041251"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=01041252"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=01041252"/>
 
-    <link rel="stylesheet" href="src/play.css?v=01041251"/>
+    <link rel="stylesheet" href="src/play.css?v=01041252"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=01041251"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=01041251"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=01041251"></script-->
-    <script type="text/javascript" src="src/poll.js?v=01041251"></script>
-    <script type="text/javascript" src="src/play.js?v=01041251"></script>
+    <script type="text/javascript" src="src/common.js?v=01041252"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=01041252"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=01041252"></script-->
+    <script type="text/javascript" src="src/poll.js?v=01041252"></script>
+    <script type="text/javascript" src="src/play.js?v=01041252"></script>
     <script type="text/javascript">
       window.onload = async function() {
         try {
@@ -187,7 +187,7 @@
               </div>
             </div>
             <div class="swiper-slide non-white-bg list-">
-              <h2>Ваши розыгрыши</h2>
+              <h2 style="margin-top: 10vh;">Ваши розыгрыши</h2>
               <div id="drawings_list">
                 <div id="yesterday">
                   <!--h3>Вчера и позавчера</h3-->
