--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,19 +40,21 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=01041252"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=01041252"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=01062041"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=01062041"/>
 
-    <link rel="stylesheet" href="src/play.css?v=01041252"/>
+    <link rel="stylesheet" href="src/play.css?v=01062041"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=01041252"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=01041252"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=01041252"></script-->
-    <script type="text/javascript" src="src/poll.js?v=01041252"></script>
-    <script type="text/javascript" src="src/play.js?v=01041252"></script>
+    <script type="text/javascript" src="src/common.js?v=01062041"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=01062041"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=01062041"></script-->
+    <script type="text/javascript" src="src/poll.js?v=01062041"></script>
+    <script type="text/javascript" src="src/play.js?v=01062041"></script>
     <script type="text/javascript">
       window.onload = async function() {
+        //'use strict';
+  
         try {
           tguid = get_tguid_from_url();
           if (tguid == -1) {
