--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,17 +40,17 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=01091410"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=01091410"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=01091411"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=01091411"/>
 
-    <link rel="stylesheet" href="src/play.css?v=01091410"/>
+    <link rel="stylesheet" href="src/play.css?v=01091411"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=01091410"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=01091410"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=01091410"></script-->
-    <script type="text/javascript" src="src/poll.js?v=01091410"></script>
-    <script type="text/javascript" src="src/play.js?v=01091410"></script>
+    <script type="text/javascript" src="src/common.js?v=01091411"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=01091411"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=01091411"></script-->
+    <script type="text/javascript" src="src/poll.js?v=01091411"></script>
+    <script type="text/javascript" src="src/play.js?v=01091411"></script>
     <script type="text/javascript">
       window.onload = async function() {
         //'use strict';
@@ -173,6 +173,7 @@
                       <canvas class="canvas" id="js-canvas"></canvas>
                       <div id="ad"></div>
                       <div id="ad_explain"></div>
+                      <div id="ad_marker">Реклама</div>
                     </div>
                   </div>
 
@@ -193,7 +194,7 @@
               <div id="drawings_list">
                 <div id="yesterday">
                   <!--h3>Вчера и позавчера</h3-->
-                  <h3>Вчера или ранее</h3>
+                  <h3>Вчера или последний ранее</h3>
                   <div id="just"><p>Не было вовсе, не было по вашим настройкам, либо вы просто вчера не участвовали</p></div>  
                 </div>
                 <h3>Сегодня</h3>
