--- a/webapp/index.html
+++ b/webapp/index.html
@@ -88,6 +88,7 @@
 
             let a = '' + window.Telegram.WebApp.viewportHeight + 'x' + window.Telegram.WebApp.viewportStableHeight
             document.getElementById('ad_marker').innerHTML += a;
+            document.getElementById('ad_marker').style.bottom = window.Telegram.WebApp.viewportHeight - 10 + 'px';
           } // Error: WebAppHeaderColorKeyInvalid at setHeaderColor
           catch(error) {
             ;
